<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="20"
        android:inputType="textPersonName"
        android:text=""
        android:textAlignment="textEnd"/>

    <LinearLayout
        android:id="@+id/linear123"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onOneClick"
            android:text="@string/_1"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onTwoClick"
            android:layout_weight="1"
            android:text="@string/_2"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onThreeClick"
            android:layout_weight="1"
            android:text="@string/_3"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onPlusClick"
            android:layout_weight="1"
            android:text="@string/plus"
            android:textSize="30sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear456"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear123"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onFourClick"
            android:layout_weight="1"
            android:text="@string/_4"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onFiveClick"
            android:layout_weight="1"
            android:text="@string/_5"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSixClick"
            android:text="@string/_6"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onMinusClick"
            android:text="@string/minus"
            android:textSize="30sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear789"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear456"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSevenClick"
            android:layout_weight="1"
            android:text="@string/_7"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onEightClick"
            android:layout_weight="1"
            android:text="@string/_8"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onNineClick"
            android:layout_weight="1"
            android:text="@string/_9"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonDivision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onDivisionClick"
            android:text="@string/division"
            android:textSize="30sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear789"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onZeroClick"
            android:layout_weight="1"
            android:text="@string/_0"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_comma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCommaClick"
            android:layout_weight="1"
            android:text="@string/comma"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClearClick"
            android:text="@string/c"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonMulti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onMultiClick"
            android:text="@string/multi"
            android:textSize="30sp" />


    </LinearLayout>

</RelativeLayout>